welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: Unit does not take parameters
  creeTableau()
             ^Array1:33: error: not found: value T
    setCouleurBrosse(T(i-1))
                     ^